<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">终端运维管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="more_menu">更多菜单</string>
	<string name="abs__activitychooserview_choose_application">no use</string>
	<string name="task_work_location">工作地点：</string>
	<string name="task_install_location">安装地点：</string>
	<string name="task_address">详细地址：</string>
	<string name="task_title">任务标题：</string>
	<string name="task_description">任务描述：</string>
	<string name="task_contacts">任务联系人：</string>
	<string name="task_contacts_phone">联系人电话：</string>
	<string name="task_plan_starttime">计划开始时间：</string>
	<string name="task_plan_endtime">计划结束时间：</string>
	<string name="task_equipment">设备编号：</string>
	<string name="task_product_type">产品类型：</string>
	<string name="task_state">任务状态：</string>
	<string name="task_type">任务归类：</string>
	<string name="task_recipient">领取人：</string>
	<string name="task_recipient_phone">领取人电话：</string>
	<string name="task_accessory">附件：</string>
	<string name="login_botton_text">Copyright © 2006–2014 济南汇通远德科技有限公司 All Rights Reserved</string>
	<string name="start_upload">开始上传</string>
   <string name="uploading">正在上传</string>
   <string name="load_success">上传成功</string>
   <string name="load_failed">上传失败</string>
   <string name="load_cancel">上传取消</string>
</resources>
