<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/activity_bg_color" >

    <TableLayout
        android:background="@drawable/bg_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="HardcodedText" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="任务信息" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_work_location" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_task_location"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_state" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/edit_task_state"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <!--
        <TableRow
        <View style="@style/h_line" />
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_address" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_task_address"
                style="@style/style_task_detail_textview"
                android:layout_weight="1"
                 />
        </TableRow>
        -->


        <!--
        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_title" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_title"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />
        </TableRow>
        -->

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_description" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_description"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />
        </TableRow>

        <!--
            <View style="@style/h_line" />

         <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_contacts" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_contacts"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_contacts_phone" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_contacts_phone"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />
        </TableRow>
        -->

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_plan_starttime" />

            <View style="@style/v_line" />

            <!--
                 <EditText
                android:id="@+id/edit_task_plan_starttime"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />
            -->

            <TextView
                android:id="@+id/edit_task_plan_starttime"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_plan_endtime" />

            <View style="@style/v_line" />

            <!--
                 <EditText
                android:id="@+id/edit_task_plan_endtime"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />
            -->

            <TextView
                android:id="@+id/edit_task_plan_endtime"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_recipient" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_recipient"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_recipient_phone" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_recipient_phone"
                style="@style/style_task_detail_edittext"
                android:inputType="phone"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="联系人：" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_contact"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="联系人电话：" />

            <View style="@style/v_line" />

            <EditText
                android:id="@+id/edit_task_contact_phone"
                style="@style/style_task_detail_edittext"
                android:inputType="phone"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_type" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/edit_task_type"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="客户单位：" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_customer_unit"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/edit_task_reamrk"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="任务备注" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="装置信息" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_equipment" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/edit_task_equipment"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_install_location" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/edit_task_install_location"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_product_type" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/edit_task_equipment_type"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="设备厂家：" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_task_equipment_factory"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="TooManyViews" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="资产编号：" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_asset_number"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <View style="@style/v_line" />

            <TextView
                style="@style/style_task_detail_textview"
                android:text="逻辑地址：" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_task_logical_address"
                style="@style/style_task_detail_textview"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="TooManyViews" >

            <TextView
                style="@style/style_task_detail_textview"
                android:text="@string/task_accessory" />

            <View style="@style/v_line" />

            <TextView
                android:id="@+id/tv_task_accessory"
                style="@style/style_task_detail_textview"
                android:layout_weight="1"
                android:hint="点击查看附件"
                tools:ignore="HardcodedText" />
        </TableRow>

        <View style="@style/h_line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/edit_equipment_reamrk"
                style="@style/style_task_detail_edittext"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="设备备注" />
        </TableRow>
    </TableLayout>

</ScrollView>